add buy & sell page + add ammount component and details

--- a/src/assets/style/include-icons.scss
+++ b/src/assets/style/include-icons.scss
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-good:before {
+  content: "\e907";
+}
 .icon-advanced-view:before {
   content: "\e900";
 }
