--- a/src/components/Auth/AuthConfirmEmailForm/AuthConfirmEmailForm.scss
+++ b/src/components/Auth/AuthConfirmEmailForm/AuthConfirmEmailForm.scss
@@ -41,8 +41,8 @@
 }
 
 .auth-confirm-email-form__button {
-  max-width: 165px;
-  margin: 0 auto;
+  display: block;
+  text-align: center;
 
   .user-button__content {
     width: 100%;
