--- a/src/components/Auth/AuthConfirmPhoneForm/AuthConfirmPhoneForm.scss
+++ b/src/components/Auth/AuthConfirmPhoneForm/AuthConfirmPhoneForm.scss
@@ -3,10 +3,13 @@
   width: 100%;
 
   margin: 96.5px auto 0 auto;
-  padding: 26px 0 25.5px 0;
+}
+
+.auth-confirm-phone-form__wrap {
+  padding: 26px 0 17.5px 0;
   box-sizing: border-box;
 
-  border-radius: 2px;
+  border-radius: 5px;
 
   background-color: #fff;
   box-shadow: 0 0 14px rgba(0, 0, 0, 0.10);
@@ -22,25 +25,24 @@
 
   margin: 0 auto 23.5px auto;
 
-  color: #F65454;
+  color: #9D9D9D;
   font-size: 18px;
 
   border-radius: 50%;
-  background-color: #FFD9D9;
+  background-color: #ECECEC;
 }
 
 .auth-confirm-phone-form__heading {
   margin: 0;
 
-  padding-bottom: 13.5px;
+  padding-bottom: 12.5px;
 
   color: #000000;
-  font-size: 14px;
-  font-weight: bold;
+  font-size: 16px;
   line-height: 16px;
   letter-spacing: .36px;
-  text-transform: uppercase;
   text-align: center;
+  font-weight: normal;
 }
 
 .auth-confirm-phone-form__desk {
@@ -61,7 +63,7 @@
   display: flex;
   margin-bottom: 18px;
 
-  padding: 0 32px;
+  padding: 0 17px;
 
   .vue-tel-input[data-v-099879eb] {
     border: 1px solid #D1D1D1;
@@ -165,8 +167,11 @@
 }
 
 .auth-confirm-phone-form__button {
+  padding: 0 17px;
+  box-sizing: border-box;
+
   .user-button__content {
-    width: 165px;
+    width: 100%;
     display: block;
     margin: 0 auto;
   }
@@ -177,13 +182,17 @@
 }
 
 .auth-confirm-phone-form__error {
-  margin: -3px 0 10px 0;
+  margin: -3px auto 10px auto;
+  padding: 0 33px;
 
-  color: #fff;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 23px;
+  display: table;
+
+  color: #D21616;
+  font-size: 13px;
+  line-height: 40px;
   text-align: center;
 
-  background-color: #F65454;
+  border-radius: 6px;
+  border: 1px solid #FFB8B8;
+  background-color: #FFCCCC;
 }
