--- a/src/components/Core/CodeVerification/CodeVerification.scss
+++ b/src/components/Core/CodeVerification/CodeVerification.scss
@@ -46,7 +46,7 @@
 
   padding: 0 5px;
 
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid #6A6A6A;
 
   &:not(:last-child) {
     margin-right: 16px;
