--- a/src/components/Core/Logo/Logo.scss
+++ b/src/components/Core/Logo/Logo.scss
@@ -1,7 +1,7 @@
 .primary-logo {
-  color: #F65454;
+  color: #000000;
   font-size: 17px;
-  font-weight: bold;
+  font-weight: normal;
   line-height: 20px;
 
   display: flex;
@@ -19,10 +19,9 @@
     height: 30px;
     display: inline-block;
 
-    border-radius: 50%;
-    background-size: 100%;
-    background-image: url('../../../assets/img/icon_reyna.svg');
+    background-size: 70%;
+    background-image: url('../../../assets/img/icons/header-logo.svg');
     background-repeat: no-repeat;
-    background-position: calc(50% + 1px) center;
+    background-position: center;
   }
 }
