--- a/src/components/Core/UserButton/UserButton.scss
+++ b/src/components/Core/UserButton/UserButton.scss
@@ -6,7 +6,7 @@
   width: auto;
   display: inline-block;
   text-decoration: none;
-  border-radius: 2px;
+  border-radius: 3px;
   outline: none;
   border: none;
   cursor: pointer;
@@ -20,8 +20,8 @@
   font-weight: 500;
   letter-spacing: .2px;
   line-height: 37px;
-  text-transform: uppercase;
-  background-color: #F65454;
+  background-color: #D21616;
+  border: 1px solid #AA0303;
 
   padding: 0 20px;
 
@@ -33,12 +33,13 @@
 
 .user-button__content--theme-green {
   color: #fff;
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 500;
   letter-spacing: .2px;
   line-height: 37px;
-  text-transform: uppercase;
-  background-color: #2ED44D;
+  background-color: #00B121;
+
+  border: 1px solid #069521;
 
   padding: 0 20px;
 
