--- a/src/components/Account/GettingStart/GettingStart.scss
+++ b/src/components/Account/GettingStart/GettingStart.scss
@@ -35,7 +35,7 @@
   background-color: #fff;
 
   &:not(:last-child) {
-    border-bottom: 1px solid rgba(246, 84, 84, 0.17);
+    border-bottom: 1px solid #D9D9D9;
   }
 }
 
