--- a/src/components/Auth/AuthHeader/AuthHeader.scss
+++ b/src/components/Auth/AuthHeader/AuthHeader.scss
@@ -2,12 +2,19 @@
   width: 100%;
   position: relative;
 
+  padding: 22px 0;
+}
+
+.auth-header--theme-red {
+  background-color: #D21616;
+}
+
+.auth-header__container {
+  width: 100%;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-  padding: 22px 50px 0 50px;
-  box-sizing: border-box;
 }
 
 .auth-header__logo {
