--- a/src/components/Core/Form/FormInput/FormInput.scss
+++ b/src/components/Core/Form/FormInput/FormInput.scss
@@ -117,3 +117,8 @@
 .form-input__object--emailNotCorrect-yes {
   padding-right: 180px;
 }
+
+.form-input__object--type-Disabled {
+  background-color: #F6F6F6;
+  color: rgba(0, 0, 0, 0.7);
+}
