--- a/src/components/Core/AccountProfile/AccountProfile.scss
+++ b/src/components/Core/AccountProfile/AccountProfile.scss
@@ -11,6 +11,7 @@
 
   .account-profile__arrow {
     color: rgba(0, 0, 0, 0.7);
+    font-size: 8px;
   }
 
   .account-profile__actions {
@@ -44,6 +45,7 @@
 
   .account-profile__arrow {
     color: rgba(255, 255, 255, 0.7);
+    font-size: 8px;
   }
 
   .account-profile__actions {
@@ -153,4 +155,30 @@
 
   padding: 0 18px;
   box-sizing: border-box;
+}
+
+.account-profile__address-wrap {
+  padding: 0 18px;
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 8px;
+}
+
+.account-profile__address-title {
+  color: #000000;
+  font-size: 11px;
+  line-height: 15px;
+  font-weight: normal;
+
+  margin-bottom: 1px;
+}
+
+.account-profile__address {
+  color: #D21616;
+  font-size: 10px;
+  line-height: 14px;
+  font-weight: normal;
 }
