--- a/src/components/Core/UserButton/UserButton.scss
+++ b/src/components/Core/UserButton/UserButton.scss
@@ -48,3 +48,11 @@
     background-color: #10AC2D;
   }
 }
+
+.user-button__content--theme-gray {
+  color: #000000;
+  font-size: 14px;
+  font-weight: 500;
+  background-color: #F3F3F3;
+  border: 1px solid #DEDEDE;
+}
