update swap page

--- a/src/assets/style/include-fonts.scss
+++ b/src/assets/style/include-fonts.scss
@@ -1,14 +1,5 @@
 @import "../_mixins/font-face";
 
-//@include font-face("SF UI Display Fixed", "/sf-ui-display-thin/sf-ui-display-thin", 100);
-//@include font-face("SF UI Display Fixed", "/sf-ui-display-ultralight/sf-ui-display-ultralight", 200);
-//@include font-face("SF UI Display Fixed", "/sf-ui-display-light/sf-ui-display-light", 300);
-//@include font-face("SF UI Display Fixed", "/sf-ui-display-medium/sf-ui-display-medium", 500);
-//@include font-face("SF UI Display Fixed", "/sf-ui-display-semibold/sf-ui-display-semibold", 600);
-//@include font-face("SF UI Display Fixed", "/sf-ui-display-bold/sf-ui-display-bold", bold);
-//@include font-face("SF UI Display Fixed", "/sf-ui-display-heavy/sf-ui-display-heavy", 800);
-//@include font-face("SF UI Display Fixed", "/sf-ui-display-black/sf-ui-display-black", 900);
-
-@include font-face("Segoe UI Fixed", "/Segoe UI/Segoe UI Regular/Segoe UI Regular", normal);
-@include font-face("Segoe UI Fixed", "/Segoe UI/Segoe UI Semibold/Segoe UI Semibold", 600);
-@include font-face("Segoe UI Fixed", "/Segoe UI/Segoe UI Bold/Segoe UI Bold", bold);
+//@include font-face("Segoe UI Fixed", "/Segoe UI/Segoe UI Regular/Segoe UI Regular", normal);
+//@include font-face("Segoe UI Fixed", "/Segoe UI/Segoe UI Semibold/Segoe UI Semibold", 600);
+//@include font-face("Segoe UI Fixed", "/Segoe UI/Segoe UI Bold/Segoe UI Bold", bold);
