--- a/src/components/Core/SwapCurrency/SwapCurrency.scss
+++ b/src/components/Core/SwapCurrency/SwapCurrency.scss
@@ -14,6 +14,8 @@
   display: flex;
   align-items: center;
 
+  font-size: 9px;
+
   span {
     position: relative;
     transform: rotate(-90deg);
