--- a/src/components/Terminal/TerminalProjectStatus/TerminalProjectStatus.scss
+++ b/src/components/Terminal/TerminalProjectStatus/TerminalProjectStatus.scss
@@ -37,7 +37,7 @@
 }
 
 .terminal-project-status__content--type-percent {
-  color: #54E16F;
+  color: #00B121;
   font-size: 15px;
   font-weight: bold;
   line-height: 18px;
