--- a/src/components/Terminal/TerminalHeader/TerminalHeader.scss
+++ b/src/components/Terminal/TerminalHeader/TerminalHeader.scss
@@ -2,25 +2,26 @@
   width: 100%;
   height: 60px;
 
+  margin-bottom: 12.5px;
+
+  border-bottom: 1px solid #272727;
+  background-color: #161616;
+}
+
+.terminal-header__container {
+  width: 100%;
+  height: 100%;
+
   display: flex;
   align-items: center;
-
-  padding: 0 60px 0 50px;
-  box-sizing: border-box;
-
-  border-bottom: 1px solid #F65454;
 }
 
 .terminal-header__logo {
-  margin-right: 40px;
+  margin-right: 100px;
 }
 
 .terminal-header__calendar {
   margin-right: 20.5px;
-}
-
-.terminal-header__status {
-  margin-right: 83px;
 }
 
 .terminal-header__profile {
