--- a/src/assets/style/vue-bar.scss
+++ b/src/assets/style/vue-bar.scss
@@ -1,69 +1,11 @@
-//.vb > .vb-dragger {
-//  z-index: 5;
-//  width: 5px;
-//  right: 4px;
-//}
-//
-//.vb > .vb-dragger > .vb-dragger-styler {
-//  -webkit-backface-visibility: hidden;
-//  backface-visibility: hidden;
-//  -webkit-transform: rotate3d(0,0,0,0);
-//  transform: rotate3d(0,0,0,0);
-//  -webkit-transition:
-//          background-color 100ms ease-out,
-//          margin 100ms ease-out,
-//          height 100ms ease-out;
-//  transition:
-//          background-color 100ms ease-out,
-//          margin 100ms ease-out,
-//          height 100ms ease-out;
-//  background-color: rgba(0, 0, 0, .1);
-//  border-radius: 20px;
-//  height: calc(100% - 10px);
-//  display: block;
-//}
-//
-//.vb.vb-scrolling-phantom > .vb-dragger > .vb-dragger-styler {
-//  background-color: rgba(0, 0, 0,.3);
-//}
-//
-//.vb > .vb-dragger:hover > .vb-dragger-styler {
-//  background-color: rgba(0, 0, 0,.5);
-//  margin: 0;
-//  height: 100%;
-//
-//  &:hover,
-//  &:focus {
-//    width: 5px;
-//    margin: 0 4px 0 0;
-//    height: calc(100% - 10px);
-//  }
-//}
-//
-//.vb.vb-dragging > .vb-dragger > .vb-dragger-styler {
-//  background-color: rgba(0, 0, 0,.5);
-//  margin: 0;
-//  height: 100%;
-//
-//  &:hover,
-//  &:focus{
-//    width: 5px;
-//    margin: 0 4px 0 0;
-//    height: calc(100% - 10px);
-//  }
-//}
-//
-//.vb.vb-dragging-phantom > .vb-dragger > .vb-dragger-styler {
-//  background-color: rgba(0, 0, 0,.5);
-//}
-
 .vb-dragger {
   z-index: 9999;
 
   right: 5px;
 
   width: 4px;
-  background-color: #F65454;
+  //background-color: #F65454;
+  background-color: transparent;
   border-radius: 50px;
 }
 
@@ -80,18 +22,21 @@
           background-color 100ms ease-out,
           margin 100ms ease-out,
           height 100ms ease-out;
-  background-color: #F65454;
+  //background-color: #F65454;
+  background-color: transparent;
   border-radius: 50px;
   height: calc(100% - 10px);
   display: block;
 }
 
 .vb.vb-scrolling-phantom > .vb-dragger > .vb-dragger-styler {
-  background-color: #F65454;
+  //background-color: #F65454;
+  background-color: transparent;
 }
 
 .vb > .vb-dragger:hover > .vb-dragger-styler {
-  background-color: #F65454;
+  //background-color: #F65454;
+  background-color: transparent;
   margin: 0;
   height: 100%;
 
@@ -104,7 +49,8 @@
 }
 
 .vb.vb-dragging > .vb-dragger > .vb-dragger-styler {
-  background-color: #F65454;
+  //background-color: #F65454;
+  background-color: transparent;
   margin: 0;
   height: 100%;
 
@@ -117,5 +63,6 @@
 }
 
 .vb.vb-dragging-phantom > .vb-dragger > .vb-dragger-styler {
-  background-color: #F65454;
+  //background-color: #F65454;
+  background-color: transparent;
 }
