--- a/src/components/Local/Terminal/TerminalOrderBook/TerminalOrderBook.scss
+++ b/src/components/Local/Terminal/TerminalOrderBook/TerminalOrderBook.scss
@@ -1,4 +1,8 @@
 .TerminalOrderBook {
+
+  display: flex;
+  flex-direction: column;
+
   min-height: 400px;
   background-color: #202020;
 }
@@ -70,6 +74,8 @@
 .TerminalOrderBook__dashboard {
   width: 100%;
 
+  flex-shrink: 0;
+
   border-collapse: collapse;
   table-layout: fixed;
 
@@ -110,4 +116,15 @@
 .TerminalOrderBook__dashboardColumn_columnPrice {
   width: 48px;
   text-align: right;
+}
+
+.TerminalOrderBook__body {
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.TerminalOrderBook__tableItem {
+  height: 100%;
 }
