--- a/src/components/Local/Terminal/TerminalTableGenerator/TerminalTableGenerator.scss
+++ b/src/components/Local/Terminal/TerminalTableGenerator/TerminalTableGenerator.scss
@@ -1,6 +1,14 @@
+.TerminalTableGenerators {
+  height: calc(100% - 48px);
+
+  display: flex;
+  flex-direction: column;
+}
+
 .TerminalTableGenerator {
   width: 100%;
 
+  flex-shrink: 0;
   border-collapse: collapse;
 }
 
@@ -101,4 +109,5 @@
 
 .TerminalTableGenerator__content {
   width: 100%;
+  height: 100%;
 }
